--- a/Note/Note/Base.lproj/Main.storyboard
+++ b/Note/Note/Base.lproj/Main.storyboard
@@ -35,6 +35,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="centerLabel" destination="m7B-e0-FGd" id="MaX-Lz-YJb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
